--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.github.redouane59.twitter</groupId>
+			<artifactId>twittered</artifactId>
+			<version>1.12</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
