Add google trends feed

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,3 @@
 twitter.search.limit=100
+google.trends.api.explore.url=https://trends.google.com/trends/api/explore
+google.trends.api.multiline.url=https://trends.google.com/trends/api/widgetdata/multiline
