Add scheduled job to pull sentiment from feeds

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
-twitter.search.limit=100
+twitter.search.limit=10
 google.trends.api.explore.url=https://trends.google.com/trends/api/explore
 google.trends.api.multiline.url=https://trends.google.com/trends/api/widgetdata/multiline
+feed.coin.list=Bitcoin(BTC),Ethereum(ETH)
