--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ twitter.search.limit=10
 google.trends.api.explore.url=https://trends.google.com/trends/api/explore
 google.trends.api.multiline.url=https://trends.google.com/trends/api/widgetdata/multiline
 feed.coin.list=Bitcoin(BTC),Ethereum(ETH)
+coinmarketcap.global.metrics.latest.url=https://pro-api.coinmarketcap.com/v1/global-metrics/quotes/latest
